Set the LangVersions appropriately

--- a/csharp-8/csharp-8.csproj
+++ b/csharp-8/csharp-8.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>csharp_8</RootNamespace>
+    <LangVersion>8.0</LangVersion>
     <Nullable>Enable</Nullable>
   </PropertyGroup>
 
