--- a/csharp-7/csharp-7.csproj
+++ b/csharp-7/csharp-7.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>csharp_7</RootNamespace>
-    <LangVersion>Latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
 </Project>
