--- a/csharp-9/csharp-9.csproj
+++ b/csharp-9/csharp-9.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>csharp_9</RootNamespace>
+    <LangVersion>9.0</LangVersion>
     <Nullable>Enable</Nullable>
     <WarningLevel>5</WarningLevel>
   </PropertyGroup>
