--- a/csharp-9/csharp-9.csproj
+++ b/csharp-9/csharp-9.csproj
@@ -9,4 +9,8 @@
     <WarningLevel>5</WarningLevel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
